http://base/id?key=value

--- a/Changes
+++ b/Changes
@@ -1,10 +1,12 @@
 1.01
     Protocol Updates
+    (The Gravatar protocol changed, so we're changing with it)
     * Gravatar expanded the max size to 512.
       [rt.cpan.org 41244] (CHISEL)
     * Base URL changed to http://www.gravatar.com/avatar/
     * Ratings are now lower cased.  Upper cased ratings still
       accepted, but will be lower cased.
+    * Using new http://base/id?key=value style.
 
 
 1.00  Sun Apr 27 14:12:24 PDT 2008
