--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.02
+    Protocol Updates
+    * Document that Gravatar has a new default option, 404.
+
+
 1.01  Thu Apr  9 13:11:32 PDT 2009
     Protocol Updates
     (The Gravatar protocol changed, so we're changing with it)
