--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-1.02
+1.02  Thu Apr  1 15:36:52 PDT 2010
     New Features
     * Added Unicornify::URL for generated unicorn avatars, OMG!!!
       http://unicornify.appspot.com/whats-this
