--- a/Changes
+++ b/Changes
@@ -1,9 +1,13 @@
 1.03
+    New Features
+    * Added Libravatar::URL for federated avatar hosting with a Gravatar
+      fallback. (http://www.libravatar.org)
+
     New Docs
     * Updated the defaults with the new "retro" and mystery man values.
-      (Francois Marier)
-    * Document the https base URL now available. (Francois Marier)
+    * Document the https base URL now available.
 
+    New Co-Maintainer (Francois Marier)
 
 1.02  Thu Apr  1 15:36:52 PDT 2010
     New Features
