--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.04  Tue Mar 29 17:47:34 NZDT 2011
+    New features
+    * Added OpenID support in Libravatar::URL
+
 1.03  Sat Mar 12 18:17:03 NZDT 2011
     New Features
     * Added Libravatar::URL for federated avatar hosting with a Gravatar
