--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.05  Wed Jul  6 22:40:06 NZST 2011
+    Security fix
+    * Sanitize DNS results in Libravatar::URL
+
 1.04  Tue Mar 29 17:47:34 NZDT 2011
     New features
     * Added OpenID support in Libravatar::URL
